--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: "ruby:latest"
 
 before_script:
-  - gem install bundler --no-ri --no-rdoc
+  - gem install bundler
   - bundle install -j $(nproc) --path vendor
 
 rspec:
